5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1785_1593.log
== TEST (2019-05-30 11:05:05) 
-- CODE:
from numpy import*
n = array(eval(input("nota 1: ")))

s = n[0]*i
i = 0

while (i < size(n)):
	h = n[i]*i
	i = i + 1
print(sum(n)/size(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:08:00) 
-- CODE:
from numpy import*
n = array(eval(input("nota 1: ")))

s = n[0]*i
i = 1

while (i < size(n)):
	h = n[i]*i
	i = i + 1
print(round(h/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:09:10) 
-- CODE:
from numpy import*
n = array(eval(input("nota 1: ")))

s = n[0]*i
i = 1

while (i < size(n)):
	i = i + 1
	h = n[i] * i
	
print(round(h/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:12:00) 
-- CODE:
from numpy import*

n = array(eval(input("nota 1: ")))

i = 1
soma = 0
while (i < size(n)):
	soma =  soma + n[i] * i
	i = i + 1	
print(round(h/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:12:24) 
-- CODE:
from numpy import*

n = array(eval(input("nota 1: ")))

i = 1
soma = 0
while (i < size(n)):
	soma =  soma + n[i] * i
	i = i + 1	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:12:34) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
soma = 0
while (i < size(n)):
	soma =  soma + n[i] * i
	i = i + 1	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:13:00) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
soma = 0
while (i < size(n)):
	soma =  soma + n[i] * i
	i = i + 1	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:13:26) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
soma = 0
while (i < size(n)):
	soma =  soma + n[i] * i
	i = i + 1	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:14:12) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
soma = 0
while (i < size(n)):
	soma =  soma + n[i] * i
	i = i + 1	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:15:37) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i < size(n)):
	soma =  soma + n[k] * i
	k = k + 1
	i = i + 1	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:16:48) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i < size(n)):
	soma =  soma + n[k] * i
	k = k + 1
	i = i + 1	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:17:48) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i <= size(n)):
	soma =  soma + n[k] * i
	k = k + 1
	i = i + 1	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:18:45) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 0
k = 0
soma = 0
while (i < size(n)):
	soma =  soma + n[k] * i
	k = k + 1
	i = i + 1	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:21:42) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i < size(n)):
	soma =  soma + n[i] * i
	
	i = i + 1	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:22:24) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 0
k = 0
soma = 0
while (i < size(n)):
	soma =  soma + n[i] * i
	
	i = i + 1	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:32) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i < size(n)):
	soma =  soma + n[k] * i
	k = k + 1
	i = i + 1	
print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:56) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i < size(n)):
	soma =  soma + n[k] * i
	k = k + 1
	i = i + 1	
print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:28:58) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i
print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:29:36) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i
print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:59) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i <= size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i
print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:23) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i <= size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i
print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:56) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i == size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i
print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:34:47) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0
while (i < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i
   print(round(soma / size(n), 2))
-- ERROR:
File "XXXX", line 12
    print(round(soma / size(n), 2))
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:03) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))

i = 1
k = 0
soma = 0

while (i < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i

print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:50) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
soma = 0
i = i

while (i < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i

print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:02) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
soma = 0
i = 1

while (i < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i

print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:39:21) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
soma = 0
i = 1

while (k < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i

print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:39:41) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
soma = 0
i = 1

while (k < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i

print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:40:08) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
soma = 0
i = 1

while (k < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i

print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:40:45) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
soma = 0
i = 1

while (i < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i

print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:51) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
soma = 0
i = 1

while (i < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i / size(n)

print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:42:26) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
soma = 0
i = 1

while (k < size(n)):
	k = k + 1
	i = i + 1	
	soma = soma + n[k] * i / size(n)

print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:46) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:33) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i
	k = k + 1
	i = i + 1
	
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:22) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i
	k = k + 1
	i = i + 1
	
print(round(soma/size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:46:54) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i / size(n) * i
	k = k + 1
	i = i + 1
	
print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:48:14) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i 
	k = k + 1
	i = i + 1
	
print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:25) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i / size(n) + i
	k = k + 1
	i = i + 1
	
print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:13) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i / sum(n)
	k = k + 1
	i = i + 1
	
print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:14) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i
	k = k + 1
	i = i + 1
	
print(round(soma / size[n], 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:44) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i
	k = k + 1
	i = i + 1
	
print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:52:08) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i
	k = k + 1
	i = i + 1
	
print(round(soma / size(n), 2))
-- EXECUTION TIME:
0.281136
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
11.5
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
2.62
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
3.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:32) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i
	k = k + 1
	i = i + 1
	
print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:53:44) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = (soma + n[k])  * i
	k = k + 1
	i = i + 1
	
print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:20) 
-- CODE:
from numpy import*

n = array(eval(input("nota: ")))


k = 0
i = 1
soma = 0

while(k < size(n)):
	
	soma = soma + n[k]  * i
	i = i + 1
	k = k + 1
	
print(round(soma / size(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
